# gmail-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  test.sh
.github/workflows/: docker.yml
src/: callbacks.py  config.py  handlers.py  main.py  monitor.py  monitor_logic.py  scraper.py  storage.py
tests/: conftest.py  send_report.py  test.py  test_change.py  test_handlers.py  test_integration.py  test_monitor_logic.py  test_notification.py  test_scraper.py  test_storage.py  test_syntax.py
